Style a lot by using bootstrap 4

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,21 +1,46 @@
-<%= search_form_for @q do |f| %>
-  <%= f.input :name_cont, label: 'Name contains', required: false %>
-  <%= f.input :open_at_equals, label: 'Open at', required: false, include_blank: true %>
-  <%= f.input :close_at_equals, label: 'Close at', required: false, include_blank: true %>
-  <%= f.submit "Search" %>
-<% end %>
+<div class="row mt-3">
+  <div class="col-sm">
+    <div class="card">
+      <div class="card-body">
+        <div class="card-title">Search</div>
+        <%= search_form_for @q do |f| %>
+          <%= f.input :name_cont, label: 'Name contains', required: false %>
+          <%= f.input :open_at_equals, label: 'Open at', required: false, include_blank: true %>
+          <%= f.input :close_at_equals, label: 'Close at', required: false, include_blank: true %>
+          <%= f.submit "Search", class: "btn btn-primary" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
 
 
-<table>
-  <tr><th>Name</th>
-      <th>Description</th>
-      <th>Action</th>
-  </tr>
-  <% @restaurants.each do |restaurant| %>
-    <tr><td><%= restaurant.name %></td>
-        <td><%= ''%></td>
-        <td><%= link_to "Detail", restaurant_path(restaurant) %></td>
-    </tr>
-  <% end %>
-</table>
-<%= paginate @restaurants %>
+<div class="row mt-3">
+  <div class="col-sm">
+    <div class="card">
+      <div class="card-body">
+        <div class="card-title">Restaurants Count: <%= @restaurants.count %></div>
+        <table class="table table-striped">
+          <thead>
+            <tr><th scope="col">Name</th>
+                <th scope="col">Description</th>
+                <th scope="col">Action</th>
+            </tr>
+          </thead>
+          <% @restaurants.each do |restaurant| %>
+            <tr><td><%= restaurant.name %></td>
+                <td><%= ''%></td>
+                <td><%= link_to "Detail", restaurant_path(restaurant), class: "btn btn-sm btn-outline-info" %></td>
+            </tr>
+          <% end %>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row mt-3">
+  <div class="col-sm">
+    <%= paginate @restaurants %>
+  </div>
+</div>
