--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -19,7 +19,7 @@
   <div class="col-sm">
     <div class="card">
       <div class="card-body">
-        <div class="card-title">Restaurants Count: <%= @restaurants.count %></div>
+        <div class="card-title">Restaurants Count: <%= @restaurants.total_count %></div>
         <table class="table table-striped">
           <thead>
             <tr><th scope="col">Name</th>
